--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^14.2.0",
     "@babylonjs/gui": "^5.26.1",
     "@babylonjs/materials": "^5.26.1",
+    "@fullpage/angular-fullpage": "^0.0.16",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "babylonjs": "^5.25.0",
     "bootstrap": "^5.2.1",
@@ -35,6 +36,7 @@
     "jacob-mott-site": "^4.0.0",
     "ngx-scrollbar": "^10.0.1",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
