Fixed the page to work well with mobile devices, cleanred things up alot, using fullpage.js directly as a js script instead of the hacky angular module, purchased scrollhorizontal extension for it

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "src/assets/models/GreenDragon2.9.glb",
               "src/assets/models/fire.glb",
               "src/assets/models/fire2.glb",
-              "src/assets/models/RedDragon2021.glb",              
+              "src/assets/models/RedDragon2021.glb",
               "src/assets/textures/skybox/skybox_nx.jpg",
               "src/assets/textures/skybox/skybox_ny.jpg",
               "src/assets/textures/skybox/skybox_nz.jpg",
@@ -41,14 +41,21 @@
               "src/assets/textures/fire.png",
               "src/assets/textures/distortion.png",
               "src/assets/textures/candleopacity.png",
-              "src/assets/linkedin.png"
+              "src/assets/linkedin.png",
+              "src/assets/scrollHorizontally/fullpage.scrollHorizontally.min.js"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/fullpage.js/dist/fullpage.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/scrollHorizontally/fullpage.scrollHorizontally.min.js",
+              "node_modules/fullpage.js/dist/fullpage.extensions.min.js",
+              "node_modules/fullpage.js/vendors/easings.min.js",
+              "node_modules/jquery/dist/jquery.min.js"         
+            ]
           },
           "configurations": {
             "production": {
