--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "@angular/router": "^14.2.0",
     "@babylonjs/gui": "^5.26.1",
     "@babylonjs/materials": "^5.26.1",
-    "@fullpage/angular-fullpage": "^0.0.16",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "babylonjs": "^5.25.0",
     "bootstrap": "^5.2.1",
     "font-awesome": "^4.7.0",
+    "fullpage.js": "^4.0.11",
     "jacob-mott-site": "^4.0.0",
+    "jquery": "^3.6.1",
     "ngx-scrollbar": "^10.0.1",
     "rxjs": "~7.5.0",
+    "save": "^2.9.0",
     "swiper": "^8.4.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
