--- a/angular.json
+++ b/angular.json
@@ -49,15 +49,16 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/fullpage.js/dist/fullpage.css",
-              "src/app/scss/all-navigations/story-telling.css"
+              "src/app/scss/all-navigations/story-telling.css"           
             ],
             "scripts": [
               "src/assets/scrollHorizontally/fullpage.scrollHorizontally.min.js",
               "node_modules/fullpage.js/dist/fullpage.extensions.min.js",
               "node_modules/fullpage.js/vendors/easings.min.js",
-              "node_modules/jquery/dist/jquery.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
