--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@babylonjs/materials": "^5.26.1",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "babylonjs": "^5.25.0",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "font-awesome": "^4.7.0",
     "fullpage.js": "^4.0.11",
     "jacob-mott-site": "^4.0.0",
