--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "jacob-mott-site": "^4.0.0",
     "jquery": "^3.6.1",
     "ngx-scrollbar": "^10.0.1",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.5.7",
+    "rxjs-compat": "^6.6.7",
     "save": "^2.9.0",
     "swiper": "^8.4.2",
     "tslib": "^2.3.0",
